Fix mobile overflow issue (replace 100vw with 100%)

--- a/src/index.css
+++ b/src/index.css
@@ -2,10 +2,11 @@
   padding: 0px;
   margin: 0px;
   box-sizing: border-box;
+  max-width: 100vw !important;
   font-family: thickblack;
 }
 body{
-  overflow-x: hidden;
+  overflow-x: hidden !important;
 }
 body::-webkit-scrollbar{
   width: 1vh;
@@ -317,18 +318,20 @@ button:hover {
 }
 @media only screen and (max-width: 768px) {
   body{
-    overflow-x: hidden;
+    margin: 0px;
+    padding: 0px;
   }
   .images {
-  width: 90%;
+  width: 90vw;
   }
   .font-semibold{
     font-size: 7vh;
   }
   .inputConatiner{
-    width: 90vw !important;
+    width: 90% !important;
   }
   #imageContainer{
+    width: 100% !important;
     padding: 0.3vh;
   }
 }
